--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,13 @@
+spring.datasource.url=jdbc:mysql://localhost:3306/models_spring
+spring.datasource.username=root
+spring.datasource.password=1111
+
+spring.jpa.hibernate.ddl-auto=update
+
+spring.jpa.show-sql=true
+spring.jpa.database=MYSQL
+spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
+
 spring.thymeleaf.prefix=classpath:/templates/
 spring.thymeleaf.suffix=.html
 spring.web.resources.static-locations=classpath:/META-INF/resources/,classpath:/resources/,classpath:/static/,classpath:/public/
